<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cocktails And Quiz</string>
    <string name="cocktail_name">Sex on the Beach</string>
    <string name="cocktail_number"></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_list">Cocktails</string>
    <string name="alapszesz">Alapszesz:</string>
    <string name="pohar">Pohár:</string>
    <string name="fajta">Fajtája:</string>
    <string name="question">Number of cocktails in quiz:</string>
    <string name="mennyiseg1">Mennyiség:</string>
    <string name="nev1">Név:</string>
    <string name="mennyiseg2">Mennyiség:</string>
    <string name="nev2">Név:</string>
    <string name="mennyiseg3">Mennyiség:</string>
    <string name="nev3">Név:</string>
    <string name="mennyiseg4">Mennyiség:</string>
    <string name="nev4">Név:</string>
    <string name="mennyiseg5">Mennyiség:</string>
    <string name="nev5">Név:</string>
    <string name="mennyiseg6">Mennyiség:</string>
    <string name="nev6">Név:</string>
    <string name="mennyiseg7">Mennyiség:</string>
    <string name="nev7">Név:</string>
    <string name="mennyiseg8">Mennyiség:</string>
    <string name="nev8">Név:</string>
    <string name="mennyiseg9">Mennyiség:</string>
    <string name="nev9">Név:</string>
    <string name="osszetevo1">1. Összetevő:</string>
    <string name="osszetevo2">2. Összetevő:</string>
    <string name="osszetevo3">3. Összetevő:</string>
    <string name="osszetevo4">4. Összetevő:</string>
    <string name="osszetevo5">5. Összetevő:</string>
    <string name="osszetevo6">6. Összetevő:</string>
    <string name="osszetevo7">7. Összetevő:</string>
    <string name="osszetevo8">8. Összetevő:</string>
    <string name="osszetevo9">9. Összetevő:</string>
    <string name="buttonList">List</string>
    <string name="buttonQuiz">Quiz</string>
    <string name="buttonQuizOk">Ok</string>
    <string name="buttonResultOk">Ok</string>
    <string name="title_activity_quiz_result">Quiz Result</string>
    <string name="referencia">Referencia</string>
    <string name="te_valaszod">Te válaszod</string>
    <string name="eredmeny">Eredmény:</string>
    <string name="hibatlan_koktelok">Hibátlan koktélok:</string>
    <string name="helyes_valaszok">Helyes válaszok:</string>

</resources>