<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonList" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <Spinner
            android:id="@+id/cbQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonQuiz" />

</LinearLayout>